# vdfs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: defs.c  defs.h  main.c  main.cpp
src/disk/: handler.c  handler.h  raw.c  raw.h  recognise.cpp  recognise.h
src/disk/raw/: raw_handler.cpp  raw_handler.h
src/ops/: fs_ops.cpp  fs_ops.h
src/part/: mbr.c  mbr.h
